# port

./: .earthlyignore  .gitignore  .tool-versions  CONTRIBUTING.md  Earthfile  README.md  asset-manifest.json  index.html  package-lock.json  package.json  port-0.0.0-py3-none-any.whl  tailwind.config.js  tsconfig.json  tsconfig.prod.json
.github/workflows/: _build_release.yml  gh-pages.yml  release.yml
.husky/: pre-commit
D3I_JOSS_paper/: paper.bib  paper.html  paper.md
public/: ddpinspect-0.0.0-py3-none-any.whl  index.html  manifest.json  port-0.0.0-py3-none-any.whl
scripts/: update_version_number.sh
src/: App.test.tsx  App.tsx  fake_bridge.ts  fake_storage.ts  fonts.css  index.tsx  live_bridge.ts  live_storage.ts  local_system.ts  py_script.ts  reportWebVitals.ts
src/framework/: assembly.ts  command_router.ts  helpers.ts  styles.css  text_bundle.ts  translatable.ts  translator.ts
src/framework/processing/py/: pyproject.toml
src/framework/processing/py/port/: PrivacyFilter.py  __init__.py  chats_to_table.py  helpers.py  main.py  my_exceptions.py  netflix.py  script.py  unzipddp.py  validate.py  whatsapp.py
src/framework/processing/py/port/api/: commands.py  props.py
src/test/: visualisationEngine.test.tsx
static/css/: main.8165b731.css  main.8165b731.css.map  main.a01b9735.css  main.a01b9735.css.map  main.aa8948f1.css  main.aa8948f1.css.map  main.b41b2a6f.css  main.b41b2a6f.css.map  main.e53d46a7.css  main.e53d46a7.css.map  main.e5f05c63.css  main.e5f05c63.css.map
static/js/: 353.328efe42.chunk.js  353.328efe42.chunk.js.map  448.21dda5a7.chunk.js  (+21 more)
(+78 files in other folders)
